<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.elon.finalapp.InputCheck"
    android:background="#3872d4">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="edu.elon.saferides.RiderInfoCheckActivity"
        android:weightSum="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/print_view"
            android:id="@+id/printView"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#ffffff" />

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/printCheck"
            android:textAlignment="center"
            android:textColor="#ffffff" />
        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hour_view"
            android:id="@+id/hourView"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#ffffff" />

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/hourCheck"
            android:textAlignment="center"
            android:textColor="#ffffff" />

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/minute_view"
            android:id="@+id/textView3"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#ffffff" />

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/minuteCheck"
            android:textAlignment="center"
            android:textColor="#ffffff" />

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/check_correct"
            android:id="@+id/check_correct"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="#ffffff"
            android:layout_weight="0.29" />


        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/confirmButton"
            android:onClick="onClickNext"
            android:id="@+id/next_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.37"
            android:textColor="#ffffff"
            android:background="#323232" />


    </LinearLayout>

</RelativeLayout>
